# splatoon-capture-parser

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
docker/app/: .bashrc  Dockerfile  entrypoint.dev.sh
notebooks/: loadsample.ipynb  matching death.ipynb  ocrsample.ipynb
resources/fonts/: spl.traineddata  spl2.traineddata
