[tool.poetry]
name = "spsp"
version = "0.1.0"
description = ""
authors = ["denzow <denzow@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
opencv-python = "^4.5.3"
jupyter = "^1.0.0"
jupyterlab = "^3.1.13"
matplotlib = "^3.4.3"
pyocr = "^0.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=1.1.6"]
build-backend = "poetry.masonry.api"
